--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "graphql": "^15.5.0",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons-kit": "^1.3.1",
+    "react-select": "^4.3.1"
   }
 }
